fix: scrollbars hidden

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -276,18 +276,14 @@ table {
   font-weight: 600;
 }
 
-/* Внешняя часть (трек) */
-::-webkit-scrollbar {
-  width: 8px; /* меньше = тоньше */
+/* Chrome, Safari, Edge */
+*::-webkit-scrollbar {
+  display: none;
 }
 
-/* Сам ползунок */
-::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.2); /* мягкий серый */
-  border-radius: 4px;
+/* Firefox */
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* IE 10+ */
 }
 
-/* Фон под ползунком */
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
